Fix issues with mobile resolutions having horizontal scrollbars.  Fix links on home page.  Fixed navigation button displaying weird on mobile resolution

--- a/portal/portal/static/sass/navigation.sass
+++ b/portal/portal/static/sass/navigation.sass
@@ -87,6 +87,11 @@ body
 
 .panel-layout
     .sidebar-container
+        .sidebar-toggle
+            width: 100%
+            padding: 4px
+            .btn-default
+                margin: 0px
         .sidebar
             background-color: $side-panel-bg-color
             padding: 20px
@@ -167,6 +172,7 @@ body
             .sidebar
                 top: $primary-nav-height
                 width: $sidebar-width
+                padding-bottom: $primary-nav-height * 2
 
         .panel-content
             padding-left: $sidebar-width
